--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,4 +14,25 @@
     <servlet-name>AddProductMasterServlet</servlet-name>
     <url-pattern>/AddProductMasterServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ReturnOrderServlet</display-name>
+    <servlet-name>ReturnOrderServlet</servlet-name>
+    <servlet-class>com.capgemini.go.servlet.ReturnOrderServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ReturnOrderServlet</servlet-name>
+    <url-pattern>/ReturnOrderServlet</url-pattern>
+  </servlet-mapping>
+  
+   <servlet>
+    <description></description>
+    <display-name>ReturnProductServlet</display-name>
+    <servlet-name>ReturnProductServlet</servlet-name>
+    <servlet-class>com.capgemini.go.servlet.ReturnProductServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ReturnProductServlet</servlet-name>
+    <url-pattern>/ReturnProductServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
