--- a/pom.xml
+++ b/pom.xml
@@ -75,5 +75,11 @@
 			<version>4.7.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-junit</artifactId>
+			<version>4.7.2</version>
+		</dependency>
+
 	</dependencies>
 </project>
