--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,217 +1,260 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
-  <display-name>go</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-  </welcome-file-list>
-  <servlet>
-    <description></description>
-    <display-name>AddProductMasterServlet</display-name>
-    <servlet-name>AddProductMasterServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.AddProductMasterServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AddProductMasterServlet</servlet-name>
-    <url-pattern>/AddProductMasterServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description>to update product</description>
-    <display-name>UpdateProductServlet</display-name>
-    <servlet-name>UpdateProductServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.UpdateProductServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>UpdateProductServlet</servlet-name>
-    <url-pattern>/UpdateProductServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description>to add a product </description>
-    <display-name>AddProductServlet</display-name>
-    <servlet-name>AddProductServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.AddProductServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AddProductServlet</servlet-name>
-    <url-pattern>/AddProductServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description>to register user</description>
-    <display-name>UserRegistrationServlet</display-name>
-    <servlet-name>UserRegistrationServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.UserRegistrationServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>UserRegistrationServlet</servlet-name>
-    <url-pattern>/UserRegistrationServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description>to delete product</description>
-    <display-name>DeleteProductServlet</display-name>
-    <servlet-name>DeleteProductServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.DeleteProductServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>DeleteProductServlet</servlet-name>
-    <url-pattern>/DeleteProductServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description>to increase quantity</description>
-    <display-name>IncreaseProductQuantityServlet</display-name>
-    <servlet-name>IncreaseProductQuantityServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.IncreaseProductQuantityServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>IncreaseProductQuantityServlet</servlet-name>
-    <url-pattern>/IncreaseProductQuantityServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description>to view camping products</description>
-    <display-name>CampingProductServlet</display-name>
-    <servlet-name>CampingProductServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.CampingProductServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>CampingProductServlet</servlet-name>
-    <url-pattern>/CampingProductServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description>to view golf products</description>
-    <display-name>GolfProductServlet</display-name>
-    <servlet-name>GolfProductServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.GolfProductServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>GolfProductServlet</servlet-name>
-    <url-pattern>/GolfProductServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description>to view Mountain Product</description>
-    <display-name>MountainProductServlet</display-name>
-    <servlet-name>MountainProductServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.MountainProductServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>MountainProductServlet</servlet-name>
-    <url-pattern>/MountainProductServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description>to view outdoor products</description>
-    <display-name>OutdoorProductServlet</display-name>
-    <servlet-name>OutdoorProductServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.OutdoorProductServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>OutdoorProductServlet</servlet-name>
-    <url-pattern>/OutdoorProductServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description>to view personal products</description>
-    <display-name>PersonalProductServlet</display-name>
-    <servlet-name>PersonalProductServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.PersonalProductServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>PersonalProductServlet</servlet-name>
-    <url-pattern>/PersonalProductServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description>to view all products</description>
-    <display-name>AllProductServlet</display-name>
-    <servlet-name>AllProductServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.AllProductServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AllProductServlet</servlet-name>
-    <url-pattern>/AllProductServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>AddAddressServlet</display-name>
-    <servlet-name>AddAddressServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.AddAddressServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AddAddressServlet</servlet-name>
-    <url-pattern>/AddAddressServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description>to update address</description>
-    <display-name>UpdateAddressServlet</display-name>
-    <servlet-name>UpdateAddressServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.UpdateAddressServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>UpdateAddressServlet</servlet-name>
-    <url-pattern>/UpdateAddressServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description>to delete address</description>
-    <display-name>DeleteAddressServlet</display-name>
-    <servlet-name>DeleteAddressServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.DeleteAddressServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>DeleteAddressServlet</servlet-name>
-    <url-pattern>/DeleteAddressServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description>to filter product</description>
-    <display-name>FilterProductServlet</display-name>
-    <servlet-name>FilterProductServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.FilterProductServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>FilterProductServlet</servlet-name>
-    <url-pattern>/FilterProductServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description>to add item to cart</description>
-    <display-name>AddItemServlet</display-name>
-    <servlet-name>AddItemServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.AddItemServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AddItemServlet</servlet-name>
-    <url-pattern>/AddItemServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description>to buy product</description>
-    <display-name>BuyNowServlet</display-name>
-    <servlet-name>BuyNowServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.BuyNowServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>BuyNowServlet</servlet-name>
-    <url-pattern>/BuyNowServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>SalesRepServlet</display-name>
-    <servlet-name>SalesRepServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.SalesRepServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>SalesRepServlet</servlet-name>
-    <url-pattern>/SalesRepServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>AddFreqOrderServlet</display-name>
-    <servlet-name>AddFreqOrderServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.AddFreqOrderServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AddFreqOrderServlet</servlet-name>
-    <url-pattern>/AddFreqOrderServlet</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>SuggestFavServlet</display-name>
-    <servlet-name>SuggestFavServlet</servlet-name>
-    <servlet-class>com.capgemini.go.servlet.SuggestFavServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>SuggestFavServlet</servlet-name>
-    <url-pattern>/SuggestFavServlet</url-pattern>
-  </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	version="3.0">
+	<display-name>go</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+	</welcome-file-list>
+	<servlet>
+		<description></description>
+		<display-name>AddProductMasterServlet</display-name>
+		<servlet-name>AddProductMasterServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.AddProductMasterServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AddProductMasterServlet</servlet-name>
+		<url-pattern>/AddProductMasterServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description>to update product</description>
+		<display-name>UpdateProductServlet</display-name>
+		<servlet-name>UpdateProductServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.UpdateProductServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UpdateProductServlet</servlet-name>
+		<url-pattern>/UpdateProductServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description>to add a product </description>
+		<display-name>AddProductServlet</display-name>
+		<servlet-name>AddProductServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.AddProductServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AddProductServlet</servlet-name>
+		<url-pattern>/AddProductServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description>to register user</description>
+		<display-name>UserRegistrationServlet</display-name>
+		<servlet-name>UserRegistrationServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.UserRegistrationServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UserRegistrationServlet</servlet-name>
+		<url-pattern>/UserRegistrationServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description>to delete product</description>
+		<display-name>DeleteProductServlet</display-name>
+		<servlet-name>DeleteProductServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.DeleteProductServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>DeleteProductServlet</servlet-name>
+		<url-pattern>/DeleteProductServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description>to increase quantity</description>
+		<display-name>IncreaseProductQuantityServlet</display-name>
+		<servlet-name>IncreaseProductQuantityServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.IncreaseProductQuantityServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>IncreaseProductQuantityServlet</servlet-name>
+		<url-pattern>/IncreaseProductQuantityServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description>to view camping products</description>
+		<display-name>CampingProductServlet</display-name>
+		<servlet-name>CampingProductServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.CampingProductServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CampingProductServlet</servlet-name>
+		<url-pattern>/CampingProductServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description>to view golf products</description>
+		<display-name>GolfProductServlet</display-name>
+		<servlet-name>GolfProductServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.GolfProductServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>GolfProductServlet</servlet-name>
+		<url-pattern>/GolfProductServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description>to view Mountain Product</description>
+		<display-name>MountainProductServlet</display-name>
+		<servlet-name>MountainProductServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.MountainProductServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>MountainProductServlet</servlet-name>
+		<url-pattern>/MountainProductServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description>to view outdoor products</description>
+		<display-name>OutdoorProductServlet</display-name>
+		<servlet-name>OutdoorProductServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.OutdoorProductServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>OutdoorProductServlet</servlet-name>
+		<url-pattern>/OutdoorProductServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description>to view personal products</description>
+		<display-name>PersonalProductServlet</display-name>
+		<servlet-name>PersonalProductServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.PersonalProductServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>PersonalProductServlet</servlet-name>
+		<url-pattern>/PersonalProductServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description>to view all products</description>
+		<display-name>AllProductServlet</display-name>
+		<servlet-name>AllProductServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.AllProductServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AllProductServlet</servlet-name>
+		<url-pattern>/AllProductServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>AddAddressServlet</display-name>
+		<servlet-name>AddAddressServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.AddAddressServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AddAddressServlet</servlet-name>
+		<url-pattern>/AddAddressServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description>to update address</description>
+		<display-name>UpdateAddressServlet</display-name>
+		<servlet-name>UpdateAddressServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.UpdateAddressServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UpdateAddressServlet</servlet-name>
+		<url-pattern>/UpdateAddressServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description>to delete address</description>
+		<display-name>DeleteAddressServlet</display-name>
+		<servlet-name>DeleteAddressServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.DeleteAddressServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>DeleteAddressServlet</servlet-name>
+		<url-pattern>/DeleteAddressServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description>to filter product</description>
+		<display-name>FilterProductServlet</display-name>
+		<servlet-name>FilterProductServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.FilterProductServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>FilterProductServlet</servlet-name>
+		<url-pattern>/FilterProductServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description>to add item to cart</description>
+		<display-name>AddItemServlet</display-name>
+		<servlet-name>AddItemServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.AddItemServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AddItemServlet</servlet-name>
+		<url-pattern>/AddItemServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description>to buy product</description>
+		<display-name>BuyNowServlet</display-name>
+		<servlet-name>BuyNowServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.BuyNowServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>BuyNowServlet</servlet-name>
+		<url-pattern>/BuyNowServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>SalesRepServlet</display-name>
+		<servlet-name>SalesRepServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.SalesRepServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SalesRepServlet</servlet-name>
+		<url-pattern>/SalesRepServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>AddFreqOrderServlet</display-name>
+		<servlet-name>AddFreqOrderServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.AddFreqOrderServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AddFreqOrderServlet</servlet-name>
+		<url-pattern>/AddFreqOrderServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>SuggestFavServlet</display-name>
+		<servlet-name>SuggestFavServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.SuggestFavServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SuggestFavServlet</servlet-name>
+		<url-pattern>/SuggestFavServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>Shelf Time Report Servlet</display-name>
+		<servlet-name>ShelfTimeReportServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.ShelfTimeReportServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ShelfTimeReportServlet</servlet-name>
+		<url-pattern>/ShelfTimeReportServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>Delivery Time Report Servlet</display-name>
+		<servlet-name>DeliveryTimeReportServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.DeliveryTimeReportServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>DeliveryTimeReportServlet</servlet-name>
+		<url-pattern>/DeliveryTimeReportServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>login servlet</display-name>
+		<servlet-name>UserLoginServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.UserLoginServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UserLoginServlet</servlet-name>
+		<url-pattern>/UserLoginServlet</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>logout servlet</display-name>
+		<servlet-name>LogoutServlet</servlet-name>
+		<servlet-class>com.capgemini.go.servlet.LogoutServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LogoutServlet</servlet-name>
+		<url-pattern>/LogoutServlet</url-pattern>
+	</servlet-mapping>
 </web-app>
