--- a/.classpath
+++ b/.classpath
@@ -35,6 +35,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/kuroycho/Project Dependencies/mysql-connector-java-8.0.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/araj15/Downloads/mysql-connector-java-8.0.17/mysql-connector-java-8.0.17.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
