fixed entity class

--- a/GOJavaServletProject/src/main/resources/exceptionStatement.properties
+++ b/GOJavaServletProject/src/main/resources/exceptionStatement.properties
@@ -125,3 +125,8 @@ product_cant_be_cancelled= The given input is invalid and product can't be cance
 user_id_invalid= The user id entered is not in the database
 
 view_address_error = Error in viewing address of the user
+
+#Time Report error properties
+ERROR_FILE_IO_ERROR 	= Could not open Error Properties File
+QUERY_ERROR 			= Could not query Database
+DATABASE_ERROR			= Database Error
